# sansible

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: AGENT_TEST_PROMPT.md  AGENT_TEST_PROMPT_LINUX.md  TESTING_LINUX.md  TESTING_WINDOWS.md  copilot-instructions.md
.github/workflows/: build-binaries.yml
docs/: AI_HANDOFF.md  AI_INSTRUCTIONS.md  AI_PROMPT.md  AI_TASKS_NEXT.md  ARCHITECTURE.md  COMPATIBILITY.md  DEVELOPMENT.md  GALAXY.md  MODULES.md  REFACTORING.md  ROADMAP.md  TESTING.md
docs/agent/: COMPAT.md  DECISIONS.md  INVENTORY.md  LOG.md  PLAN.md  RISKS.md  STATUS.md  TESTING_PROMPT.md  TESTS.md  WINDOWS_AGENT_PROMPT.md
docs/agent/licenses/: THIRD_PARTY.md
docs/agent/log/: 2026-01-10.md
examples/: inventory.ini  linux_playbook.yml  role_demo_playbook.yml  windows_playbook.yml
examples/playbooks/: 01_basics.yml  02_conditionals.yml  03_file_management.yml  04_handlers.yml  05_blocks.yml  06_become.yml  07_gather_facts.yml  08_wait_for.yml  09_assert_fail.yml  10_roles.yml  11_check_diff.yml  README.md  inventory.ini  win_01_basics.yml  win_02_services.yml  win_03_files.yml
scripts/: bootstrap_linux.sh  bootstrap_windows.ps1
src/ansible_neo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sansible/: __init__.py  compat_scan.py  release.py  san_cli.py
src/sansible.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/sansible/cli/: __init__.py  inventory.py  main.py  playbook.py
src/sansible/connections/: __init__.py  base.py  local.py  ssh_asyncssh.py  winrm_psrp.py
src/sansible/engine/: __init__.py  errors.py  inventory.py  playbook.py  results.py  runner.py  scheduler.py  templating.py  vault.py
src/sansible/galaxy/: __init__.py  config.py  executor.py  loader.py  module.py  win_executor.py
src/sansible/inventory/: __init__.py  group.py  host.py  parser.py
src/sansible/modules/: __init__.py  base.py  builtin_add_host.py  builtin_apt.py  builtin_assert.py  builtin_blockinfile.py  builtin_command.py  builtin_copy.py  builtin_cron.py  builtin_debug.py  builtin_fail.py  builtin_fetch.py  builtin_file.py  builtin_find.py  builtin_getent.py  builtin_git.py  builtin_group.py  builtin_group_by.py  builtin_hostname.py  builtin_include_vars.py  builtin_known_hosts.py  builtin_lineinfile.py  builtin_meta.py  builtin_package.py  (+38 more)
tests/acceptance/: inventory.ini  play_local.yml  play_ssh.yml  play_winrm.yml
tests/e2e/: README.md  live_inventory.ini  production_inventory.ini  quick_test.yml  run_all_tests.sh  test_all_linux_modules.yml  test_all_windows_modules.yml  test_combined.yml  test_inventory.ini.template  test_linux_core.yml  test_linux_modules.yml  test_linux_simple.yml  test_windows_core.yml  test_windows_modules.yml
tests/fixtures/: inventory.ini
tests/golden/: __init__.py  conftest.py  test_vs_ansible.py
tests/integration/: test_ssh.py
tests/unit/: test_become.py  test_block.py  test_block_execution.py  test_check_diff_mode.py  test_cli.py  test_compat_scan.py  test_dynamic_inventory.py  test_executor_linear.py  test_fs.py  test_galaxy.py  test_gather_facts.py  test_handler_execution.py  test_handlers.py  test_include_import.py  test_inventory_ini.py  test_lineinfile_module.py  test_lookup_functions.py  test_paths.py  test_playbook_roles.py  test_proc.py  test_script_module.py  test_stat_module.py  test_tags_limit.py  test_vault.py  test_wait_for_module.py  test_win_service.py  test_win_template_module.py
tools/: __init__.py  dep_audit.py  linux_smoke.py  scan_imports.py  scan_subprocess.py  windows_smoke.py
(+28 files in other folders)
